--- a/Department/pom.xml
+++ b/Department/pom.xml
@@ -27,6 +27,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>mohammed-hakeem</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
