--- a/EmployeeDemo_SpringMVC/pom.xml
+++ b/EmployeeDemo_SpringMVC/pom.xml
@@ -13,7 +13,10 @@
 		<webVersion>5.0</webVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>6.2.0</spring.version>
-		<jakartaee.version>10.0.0</jakartaee.version> <maven.compiler.source>17</maven.compiler.source> <maven.compiler.target>17</maven.compiler.target> </properties>
+		<jakartaee.version>10.0.0</jakartaee.version> <maven.compiler.source>17</maven.compiler.source> <maven.compiler.target>17</maven.compiler.target> 
+		<sonar.organization>mohammed-hakeem</sonar.organization>
+	
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -109,4 +112,5 @@
                 <version>3.3.1</version> </plugin>
 		</plugins>
 	</build>
+
 </project>
